# learnlog

./: .gitignore  C#-WPF-learn  House prics 002  README.md  RTCSDK.rar  WPF CLI  backup  bgfx-build  capture with magnification  capture with magnification && DX9  d3d11learn  directx-render  dwpapi_DwmIsCompositionEnabled  extract windows exe resource  house prices 001  kaggle-learn  pandas-learn  python-常用函数  pytorch learn  seaborn-learn  sonar-scanner rust  virtual background  virtualbg-research  webrtc-build  webrtc-devlop  webrtc-encoded-audio-frame  webrtc_recording video and video  windows core audio 播放音频  wpf && win32  在DX窗口上使用GDI绘制文字  子窗口WS_EX_LAYERED 样式  录音_特定程序  积分-导数  视频格式转换DX
Audio/: 1111  audio-device op  filebuffer.cpp  filebuffer.h  mf_audio_render.h  temp_file.rar
ai-cpp/: paddle-ocr-windows.md  tensor_with_permute_axes.cpp
ai-cpp/paddle-ocr/: CMakeLists.txt  CTCLabelDecode.cpp  CTCLabelDecode.h  PaddleOcr.cpp  PaddleOcr.h  PaddleOcrOnnx.cpp  PaddleOcrOnnx.h  TextRecProcessor.cpp  TextRecProcessor.h  frame_def.h  image_handler.cpp  image_handler.h  main.cpp  predictor.cc  predictor.h  predictor_textrec.cpp  predictor_textrec.h  processors.cc  processors.h  processors_slim.cc  processors_slim.h  readme.md  static_infer.cpp  static_infer.h  text_detection.cpp  text_detection.h  text_handler.cpp  text_handler.h  text_recognition.cc  text_recognition.h  yaml_config.cc
ai-cpp/paddle-ocr/utils/: absl_shim.h  base_predictor.cpp  base_predictor.h  pp_option.cc  pp_option.h  utility.cc  utility.h  yaml_config.h
ai-cpp/paddle_ocr_v2/: OCR.yaml  common_def.cpp  common_def.h  frame_def.h  image_pipeline.cpp  text_analyze.cpp  text_analyze.h  text_handler.cpp  text_handler.h  timer.cpp  timer.h  ui_main_app.cpp  ui_main_app.h  ui_select_region.h  ui_win_main.cpp  user_keybinds.json  win_capture.cpp  win_capture.h  win_command.cpp  win_command.h  win_main.cpp
ai-cpp/paddle_ocr_v2/KeybindSpellExporter/: KeybindSpellExporter.lua  KeybindSpellExporter.toc
ai-cpp/paddle_ocr_v2/OneKeyBindSpellViewer/: OneKeyBindSpellViewer.lua  OneKeyBindSpellViewer.toc
ai-cpp/paddle_ocr_v2/keyboard_control/: keyboard_control.cpp  test_keyboard_control.cpp
ai-cpp/simple_ocr/: char_split_simple.py  readme.md
audio/: kiss_fft_cxx.cpp  kiss_fft_cxx.h
capture with magnifier/: CMagnifier.cpp  CMagnifier.h  MagnifierSample.cpp  readme.txt
d3d11-i420-render/: d3d11-i420-render.cpp  d3d11-i420-render.h
debug/: config.xml  load from mem.cpp
deepfilter/: df_state.cpp  df_state.h  df_tract.cpp  df_tract.h  本地安装.md
deepfilter/pulse_with_rust/: df_ffi.h  main.cpp  rust_wrapper.rs
llvm/: LLVM and MLIR 编译.md  Windows 上基于 MLIR 的 onnx-mlir 构建指南（含补丁与原因）.md  aot_builder.cpp  clang  llvm visual studio环境配置.ps1  dfn_onnx_rewriter.py  dynamic_onnx_2 static.ps1  dynamic_onnx_2_static.py  obj_parse.cpp  readme.md  runner.cpp  windows_onnx_mlir.ps1
onnx-nlir/: ConvTranspose-365076adc56021da9eac6ad34fac928732a326a8.diff  ConvTranspose.diff
onnx-op/: ArgMinMax.cpp  Bernoulli.cpp  CategoryMapper.cpp  Compress.cpp  Concat.cpp  ConcatFromSequence.cpp  ConcatShapeTranspose.cpp  ConstantOfShape.cpp  Conv.cpp  DFT.cpp  Dense.cpp  DepthToSpace.cpp  DequantizeLinear.cpp  Dropout.cpp  DynamicQuantizeLinear.cpp  Einsum.cpp  Expand.cpp  Gather.cpp  GatherElements.cpp  GatherND.cpp  Gemm.cpp  GridSample.cpp  HardMax.cpp  LRN.cpp  LayoutTransform.cpp  NonZero.cpp  Normalization.cpp  OneHotEncoder.cpp  Pad.cpp  Pooling.cpp  QuantizeLinear.cpp  RNN.cpp  RandomNormal.cpp  RandomNormalLike.cpp  Range.cpp  Reduction.cpp  Reshape.cpp  Resize.cpp  ReverseSequence.cpp  Scan.cpp  (+17 more)
python/: python 特殊方法.md
python/algorithm/: attention_demo.py  gru_demo.py  lstm_demo.py
python/deepfilter/: extract_onnx_model.py  freeze_dynamic_dim.py  run_enc_e0.py  stream_onnx_runable.rs  test_model_float_type.py
python/ocr/: screen_ocr_digits_en_batch.py  screen_ocr_paddle.py
rust/onnx_test/: df_enc_onnx.rs
tvm/: IRModule_model_shedule.pytest.py  TVM WITH visual studio 2022  complie experience.md  build_install_on_windows.md  custom_onnx_gru_importer.py  relax_blockbuider_mod.py  tvm relax gru op impl.py  tvm_funcion_build_and_run.py  tvm_gru_via_tir.py  tvm_instrument_pass中插入stub.py  tvm_optimize_onnx_save.py  tvm_topi_gru.py  windows llvm with visual studio 2022.md  循环优化.md
tvm/learn/: mode_2_dll.py  model_from_torch.py
webrtc/: readme.md  webrtc 在 audio transport.md 会给所有senders广播音频帧问题
wow/: 奇袭.md  奶僧.md  奶萨-图腾.md  常用宏.md  狂徒.md  防战.md
wow/addons/OneKeyBindSpellViewer/: OneKeyBindSpellViewer.lua  OneKeyBindSpellViewer.toc
wow/code/: redirect_input.cpp
wow/code/C++/: bgra_consumer_thread.h  bgra_png_saver.h  main.cpp  select_region.cpp  spell_recognizer.cpp  spell_recognizer.h  utils.h  wgc_capture.cpp  wgc_roi_capture.cpp
wow/code/C++/ocr/: PaddleOcr.cpp  PaddleOcr.h
wow/code/C++/ocr/paddle-ocr-v2/: main.cpp  paddle_ocr.cpp  paddle_ocr.h  readme.md
wow/code/C++/ocr/paddle-ocr-v2/utils/: utils.h
wow/code/C++/simple_ocr/char_segment/: CMakeLists.txt  char_segment.h  char_segment_main.cpp  char_segmenter.cpp  readme.md
wow/code/paddle_ocr/: image_pipeline.cpp  image_pipeline.h  text_analyze.cpp  text_handler.cpp  text_handler.h  user_config.cpp  user_config.h  user_keybinds.json  win_main.cpp
wow/code/paddle_ocr/KeybindSpellExporter/: KeybindSpellExporter.lua
wow/code/paddle_ocr/OneKeyBindSpellViewer/: OneKeyBindSpellViewer.lua  OneKeyBindSpellViewer_PlayerInfo.lua
wow/code/paddle_ocr/keyboard_control/: keyboard_control.h  test_keyboard_control.h
wow/code/python/: 010_ui_icon_retrieval.py  generate_yolo_data.py  generate_yolo_data_random.py  icon_reco.py  screen_selection.py  train_icon_mobilenetv3_multihead.py  yolo_train_infer_demo.py
